whoami-multi-rl/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: whoami-jwt
    namespace: whoami
spec:
  plugin:
    jwt:
      jwksUrl: "https://keycloak.${CLUSTERNAME}.${DOMAINNAME}/realms/traefiklabs/protocol/openid-connect/certs"
      forwardHeaders:
        groups: groups
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-rl-admin
  namespace: whoami
spec:
  rateLimit:
    period: 30s
    average: 5
    burst: 5
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-rl-support
  namespace: whoami
spec:
  rateLimit:
    period: 10s
    average: 2
    burst: 2
